--- a/Labs-mobile/lab-se-connecter-internet/app-mobile/app/src/main/res/layout/fragment_task_form.xml
+++ b/Labs-mobile/lab-se-connecter-internet/app-mobile/app/src/main/res/layout/fragment_task_form.xml
@@ -18,39 +18,40 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/form"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="295dp"
+        android:layout_height="583dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        >
+        app:layout_constraintVertical_bias="0.27">
+
 
         <EditText
             android:id="@+id/edit_task_title"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_width="247dp"
+            android:layout_height="48dp"
+            android:layout_marginTop="10dp"
             android:ems="10"
             android:hint="@string/enter_task"
             android:inputType="textPersonName"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:textColorHint="#757575"
 
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:ignore="Autofill" />
 
         <Spinner
             android:id="@+id/spinner"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_width="249dp"
+            android:layout_height="51dp"
+            android:layout_marginTop="20dp"
             android:entries="@array/priorities"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_bias="0.545"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/edit_task_title" />
-
 
         <Button
             android:id="@+id/btn_save"
@@ -58,10 +59,10 @@
             android:layout_height="wrap_content"
 
 
-            android:layout_marginStart="1dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="380dp"
             android:text="@string/save"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/btn_delete"
+            app:layout_constraintHorizontal_bias="0.262"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/spinner" />
 
@@ -69,17 +70,24 @@
             android:id="@+id/btn_delete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="380dp"
             android:text="@string/delete"
-            app:layout_constraintStart_toEndOf="@+id/btn_save"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.795"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/spinner" />
 
+        <CalendarView
+            android:id="@+id/calendarView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/spinner" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
